--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@
 }
 
 body {
-  font-family: 'Kanit';
-  background-color: #ebebeb;
+  font-family: 'Kanit' !important;
+  background-color: #ebebeb !important;
 }
