modified styles for the bottom navigation so active tab sticks even when being refreshed

--- a/src/components/bottomNav/BottomNav.module.css
+++ b/src/components/bottomNav/BottomNav.module.css
@@ -39,7 +39,7 @@
     );
   }
 
-  &[data-active] {
+  &[is-tab-active='true'] {
     z-index: 1;
     background-color: var(--mantine-color-blue-filled);
     border-color: var(--mantine-color-blue-filled);
