--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@ body {
   background-color: #ebebeb !important;
 }
 
+[role='dialog'] {
+  max-width: calc(100% - 48px);
+  border-radius: 8px;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
