--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@ body {
 
 [role='dialog'] {
   max-width: calc(100% - 48px);
+  max-height: 70vh;
+  overflow-y: scroll;
   border-radius: 8px;
 }
 
