--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,11 @@ body {
   border-radius: 8px;
 }
 
+[role='dialog'] header > h2 {
+  font-size: 16px;
+  font-weight: bold;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
