--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ body {
   background-color: #ebebeb !important;
 }
 
+header h2 {
+  font-weight: bold !important;
+}
+
 [role='dialog'] {
   max-width: calc(100% - 48px);
   max-height: 80vh;
